--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -6,3 +6,7 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #1D9371, #41d1ff);
 }
+
+*, html, body {
+  scroll-behavior: smooth;
+}
